<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GuestExpress</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_cart">My Cart</string>
    <string name="welcome_to">Welcome To</string>
    <string name="hotel_park_plaza">Hotel Park Plaza</string>
    <string name="online">Online</string>
    <string name="upcoming">Upcoming 03-15</string>
    <string name="top_offerings_today">TOP OFFERINGS TODAY</string>
    <string name="products">Products</string>
    <string name="my_selection">My Selection</string>
    <string name="settings">Settings</string>
    <string name="more_items">more our top items</string>
    <string name="eat_pizza">Eat Pizza</string>
    <string name="delicious">Delicious</string>
    <string name="eat">Eat</string>
    <string name="meanwhile_chillies">MEANWHILE CHILLI\s</string>
    <string name="dish_name">CARIBBEAN SALAD</string>
    <string name="amount_pounds">£25</string>
    <string name="our_top_items">OUR TOP ITEMS</string>
    <string name="also_choose_from">ALSO CHOOSE FROM</string>
    <string name="splash1_item_name">Farm House Pizza</string>
    <string name="splash1_offer">Buy 1 get 1 Free</string>
    <string name="splash1_rate">£15</string>
    <string name="splash2_item_name">Double Cheese Margherita</string>
    <string name="splash2_offer">Buy 1 get 1 Coke Free</string>
    <string name="splash2_rate">£18</string>
    <string name="splash3_item_name">Spicy Triple Tango</string>
    <string name="splash3_offer">Buy 1 get 5 Cheese Dip Free</string>
    <string name="splash3_rate">£13</string>
    <string name="row_item_name">Garlic Prawn</string>
    <string name="row_item_description">With Cheese</string>
    <string name="row_item_rate">£11</string>
    <string name="total_amount">Total $25 (110 DKK)</string>
    <string name="button_get_this">GET THIS</string>
    <string name="button_my_orders">MY ORDERS</string>
    <string name="dummy_text_time">time of delivery <b>10</b> minutes</string>
    <string name="dummy_text_place">to room</string>
    <string name="dummy_text_some">Dolor sit amet, consectetur adipiscing elit.</string>
    <string name="rate">Rate:</string>
    <string name="category">Category:</string>
    <string name="dummy_ingredients"><b>Ingredients:</b> Dolor sit amet, consectetur adipiscing elit</string>
    <string name="pizza">Pizza</string>
    <string name="cheese_pizza">Cheese Pizza</string>
    <string name="item_count">1</string>
    <string name="sending_order">Sending Order</string>
    <string name="order">ORDER</string>
</resources>
