<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <com.weexcel.guestexpress.util.applyfont.TextView
        android:id="@+id/list_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:background="@color/TorchRed"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/my_selection"
        android:textColor="@color/textWhite"
        android:textSize="@dimen/splash_offer"
        app:quickfont="Roboto-Regular_0.ttf"
        />

    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp" >

        <com.weexcel.guestexpress.util.applyfont.TextView
            android:id="@+id/tv_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/total_amount"
            android:textColor="@color/darker_grey"
            android:textSize="@dimen/splash_item_name"
            app:quickfont="Roboto-Regular_0.ttf"
            />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/bg_btn_get_this"
            android:orientation="horizontal"
            android:padding="10dp"
            android:id="@+id/layoutButtonGetThis"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_get_this" />

            <com.weexcel.guestexpress.util.applyfont.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="3dp"
                android:text="@string/button_get_this"
                android:textStyle="bold"
                android:textColor="@color/textWhite"
                android:textSize="@dimen/hotel_name"
                app:quickfont="Roboto-Regular_0.ttf"
                android:layout_gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/bg_btn_my_orders"
            android:orientation="horizontal"
            android:padding="10dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_order" />

            <com.weexcel.guestexpress.util.applyfont.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="3dp"
                android:text="@string/button_my_orders"
                android:textColor="@color/textWhite"
                android:textSize="@dimen/hotel_name"
                app:quickfont="Roboto-Regular_0.ttf"
                android:textStyle="bold"
                android:layout_gravity="center"
                />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/lv_productlist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_bottom"
        android:layout_below="@id/list_header"
        >
    </ListView>

</RelativeLayout>